[package]
name = "stitcher"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
debug = 1

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
bson = { version = "2.13.0", features = ["serde_path_to_error"] }
clap = { version = "4.5.23", features = ["derive"] }
compact_str = { version = "0.8.0", features = ["serde"] }
crossbeam-channel = "0.5.14"
env_logger = "0.11.6"
lazy_static = "1.5.0"
log = "0.4.22"
regex = "1.11.1"
scoped_threadpool = "0.1.9"
serde = { version = "1.0.216", features = ["derive"] }
zip = "2.2.2"

[dev-dependencies]
pretty_assertions = "1.4.1"
